@@ -9,6 +9,7 @@ pycdf
  - Allow insert, append on gAttrs
  - Properly handle reading from empty variables
  - Fix some type-guessing ordering in Python 3.6
+ - Reading empty NRV variables will now return empty array (not padding)
 
 Changes in Version 0.1.6 (2016-09-08)
 =====================================
